Bug 361530 - Filter preview of an area under selection is becomes white , it is normal when there is no selection
Summary: Filter preview of an area under selection is becomes white , it is normal whe...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-08 18:03 UTC by Raghavendra kamath
Modified: 2016-04-15 19:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-04-08 18:03:53 UTC
In Krita latest git , if you go to apply a filter to an area which is under selection , the on canvas preview of the filter turns white instead of showing the actual preview.

Reproducible: Always

Steps to Reproduce:
1.Open krita and create  a new document
2. draw something or fill it with some color
3. Select a region with rectangular or any other selection tool
4. trigger any filter for example press Ctrl + U for Hue saturation filter
5. Check the preview checkbox in the dialog if it is not checked by default

Actual Results:  
the preview is white

Expected Results:  
The preview of the filter should be shown normally
Comment 1 Marcus Kjeldsen 2016-04-10 11:22:15 UTC
I can confirm for several filters like hsv, levels, color balance, blur and such.

It does not affect all filters, though. Sobel, mean removal, wave and more have working previews.

3.0 Alpha 1. Win 10
Comment 2 Halla Rempt 2016-04-12 07:05:25 UTC
Hm, I don;t get a white area, which might be because I haven't got opengl in this vm, but it also looks like some filters have stopped doing anything!
Comment 3 Marcus Kjeldsen 2016-04-12 08:50:51 UTC
Ah, yes if I disable opengl I don't get the white preview, and it seems that the filters aren't applying anything.
Comment 4 Dmitry Kazakov 2016-04-15 19:47:28 UTC
Git commit 006eb79faf8e3239addf632606b3d54dc27eb8a3 by Dmitry Kazakov.
Committed on 15/04/2016 at 19:26.
Pushed by dkazakov into branch 'master'.

Fix creating a cloned in LoD mode

Fixes T2217

M  +6    -2    libs/image/kis_paint_device.cc

http://commits.kde.org/krita/006eb79faf8e3239addf632606b3d54dc27eb8a3