Fix creating a cloned in LoD mode

Fixes T2217
BUG:361530